--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "apollo-server": "^3.13.0",
+    "dotenv": "^17.2.3",
     "graphql": "^16.12.0"
   }
 }
